# MLMediaCompressor

./: LICENSE  README.md  pyproject.toml
MLImageCompressor/: __init__.py  compressor.py
MLMediaCompressor/: __init__.py  cli.py  video_compressor.py
