[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLMediaCompressor"
version = "0.1.2"
description = "Image compression using KMeans clustering"
authors = [{ name="Nitin Baranwal" }]
dependencies = ["numpy", "Pillow", "scikit-learn","os","subprocess","cv2"]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
mlcompress="MLMediaCompressor.cli:main"