[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLMediaCompressor"
version = "0.1.3"
description = "ML-based image and video compression library with CLI"
authors = [{ name="Nitin Baranwal", email='nitinkumarbaranawal@gmail.com' }]
dependencies = ["numpy",
    "scikit-learn",
    "opencv-python",
    "Pillow",  
]
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
mlcompress="MLMediaCompressor.cli:main"